# FootballManager

./: Makefile.am  configure.ac
src/: main.cpp
src/core/: Attribute.cpp  Attribute.h  Attributes.cpp  Attributes.h  MatchEngine.cpp  MatchEngine.h  Player.cpp  Player.h  PlayerAttributes.cpp  PlayerAttributes.h  PlayerGenerator.cpp  PlayerGenerator.h  PlayerInfo.cpp  PlayerInfo.h  PlayerRole.cpp  PlayerRole.h  RandomGenerator.cpp  RandomGenerator.h  Role.cpp  Role.h  RoleHandler.cpp  RoleHandler.h  Team.cpp  Team.h
