ACLOCAL_AMFLAGS = -I m4 --install

MAINTAINERCLEANFILES = Makefile.in \
	aclocal.m4 ar-lib config.guess config.h.in config.h.in~ config.sub \
	configure depcomp install-sh ltmain.sh missing \
	m4/libtool.m4 m4/lt~obsolete.m4 m4/ltoptions.m4 m4/ltsugar.m4 \
	m4/ltversion.m4 \
	doc/html/* doc/latex/*

CLEANFILES = *.d *.so *_rdict.* *_rdict_* *.rootmap

bin_PROGRAMS = FootballManager

FootballManager_SOURCES = src/main.cpp
